crates/language-v2/tests/src/fail/p3_references/unknown_reference/test.stderr
error: Reference to unknown item 'Unknown'.
  --> src/fail/p3_references/unknown_reference/test.rs:17:79
   |
17 |                         fields = (field_1 = Required(Baz), field_2 = Required(Unknown))
   |                                                                               ^^^^^^^
